copy-pasted commit count template

--- a/html/commit_count_template.html
+++ b/html/commit_count_template.html
@@ -23,55 +23,32 @@
 <script src="d3.v3.min.js"></script>
 <script>
     var rawData = /*data_placeholder*/"\
-date,changes size\n\
-11/08/2012,14218\n\
-13/08/2012,12977\n\
-14/08/2012,19705\n\
-15/08/2012,243553\n\
-16/08/2012,3527\n\
-17/08/2012,21786\n\
-19/08/2012,41839\n\
-20/08/2012,404475\n\
-21/08/2012,1388\n\
-23/08/2012,10796\n\
-25/08/2012,19911\n\
-26/08/2012,259407\n\
-21/09/2012,4145\n\
-07/10/2012,4892\n\
-08/10/2012,250\n\
-09/10/2012,316\n\
-15/11/2012,491\n\
-22/11/2012,36125\n\
-06/12/2012,306\n\
-07/12/2012,966\n\
-20/01/2013,30956\n\
-21/01/2013,934\n\
-22/01/2013,16863\n\
-23/01/2013,1795\n\
-24/01/2013,834\n\
-25/01/2013,1955\n\
-26/01/2013,2913\n\
-27/01/2013,42995\n\
-28/01/2013,5739\n\
-29/01/2013,11892\n\
-30/01/2013,18014\n\
-31/01/2013,251902\n\
-01/02/2013,3082\n\
-02/02/2013,3682\n\
-04/02/2013,5919\n\
-07/02/2013,665\n\
-10/02/2013,232\n\
-15/02/2013,137\n\
-18/02/2013,2045\n\
-19/02/2013,2049\n\
-20/02/2013,731\n\
-22/02/2013,594\n\
-23/02/2013,4627\n\
-24/02/2013,355\n\
-05/03/2013,284\
+date,amount of commits\n\
+18/01/2013,18\n\
+19/01/2013,5\n\
+20/01/2013,18\n\
+21/01/2013,50\n\
+22/01/2013,55\n\
+23/01/2013,35\n\
+24/01/2013,50\n\
+25/01/2013,67\n\
+26/01/2013,4\n\
+27/01/2013,5\n\
+28/01/2013,55\n\
+29/01/2013,65\n\
+30/01/2013,61\n\
+31/01/2013,62\n\
+01/02/2013,45\n\
+02/02/2013,6\n\
+03/02/2013,13\n\
+04/02/2013,53\n\
+05/02/2013,56\n\
+06/02/2013,49\n\
+07/02/2013,58\n\
+08/02/2013,49\n\
 "/*data_placeholder*/;
-    const value = "changes size";
-    const yAxisLabel = "changes size per day";
+    const value = "amount of commits";
+    const yAxisLabel = "amount of commits";
 
     var margin = {top: 20, right: 20, bottom: 30, left: 40},
         width = 960 - margin.left - margin.right,
