--- a/html/stacked_bars_template.html
+++ b/html/stacked_bars_template.html
@@ -28,7 +28,7 @@
 <body>
 <script src="d3.v3.min.js"></script>
 <script>
-    var rawData = "\
+    var rawData = /*data_placeholder*/"\
 date,author,changes size\n\
 18/01/2013,Mee,18\n\
 19/01/2013,Mee,5\n\
@@ -36,7 +36,7 @@ date,author,changes size\n\
 18/01/2013,Ooo,18\n\
 19/01/2013,Ooo,3\n\
 20/01/2013,Ooo,11\n\
-";
+"/*data_placeholder*/;
     var dateFormat = d3.time.format("%d/%m/%Y");
     var data = d3.csv.parse(rawData);
     data = d3.nest().key(function (d) { return d["author"]; }).entries(data)
@@ -83,7 +83,7 @@ date,author,changes size\n\
             .enter().append("rect")
             .attr("x", function(d) { return x(d.x); })
             .attr("y", function(d) { return y(d.y0 + d.y); })
-            .attr("width", 150) // TODO
+            .attr("width", 20) // TODO
             .attr("height", function(d) { return y(d.y0) - y(d.y0 + d.y); });
 
     svg.append("g")
