added y axis, made lines less black to see tiny bars

--- a/html/commit_size_histogram_template.html
+++ b/html/commit_size_histogram_template.html
@@ -3,19 +3,13 @@
     body {
         font: 10px sans-serif;
     }
-
     .bar rect {
         fill: steelblue;
         shape-rendering: crispEdges;
     }
-
-    .bar text {
-        fill: #fff;
-    }
-
     .axis path, .axis line {
         fill: none;
-        stroke: #000;
+        stroke: #aaa;
         shape-rendering: crispEdges;
     }
 </style>
@@ -24,48 +18,1235 @@
 <script>
     const rawData = /*data_placeholder*/"\
 commit size\n\
-1549\n\
-198\n\
-550\n\
-65\n\
-2419\n\
-75\n\
-4783\n\
-796\n\
-790\n\
-3170\n\
-1139\n\
-2659\n\
-1251\n\
-1054\n\
-4098\n\
-79\n\
-387\n\
-64\n\
-277\n\
-1580\n\
-632\n\
-3017\n\
-104\n\
-278\n\
-127\n\
-1040\n\
-1552\n\
-360\n\
+2\n\
+1\n\
+2\n\
+1\n\
+21\n\
+1\n\
+7\n\
+3\n\
+3\n\
+2\n\
+6\n\
+5\n\
+10\n\
+6\n\
+5\n\
+1\n\
+3\n\
+1\n\
+1\n\
+1\n\
+1\n\
+1\n\
+1\n\
+1\n\
+2\n\
+2\n\
+2\n\
+3\n\
+1\n\
+3\n\
+6\n\
+1\n\
+1\n\
+1\n\
+1\n\
+1\n\
+1\n\
+1\n\
+2\n\
+1\n\
+10\n\
+2\n\
+2\n\
+4\n\
+1\n\
+1\n\
+1\n\
+1\n\
+1\n\
+2\n\
+2\n\
+4\n\
+1\n\
+1\n\
+1\n\
+1\n\
+1\n\
+1\n\
+1\n\
+1\n\
+1\n\
+1\n\
+1\n\
+1\n\
+1\n\
+1\n\
+18\n\
+1\n\
+1\n\
+3\n\
+1\n\
+1\n\
+1\n\
+1\n\
+1\n\
+2\n\
+1\n\
+2\n\
+1\n\
+1\n\
+1\n\
+1\n\
+2\n\
+1\n\
+1\n\
+7\n\
+1\n\
+1\n\
+4\n\
+1\n\
+1\n\
+4\n\
+1\n\
+1\n\
+2\n\
+1\n\
+2\n\
+1\n\
+2\n\
+6\n\
+1\n\
+1\n\
+1\n\
+1\n\
+1\n\
+4\n\
+1\n\
+5\n\
+1\n\
+1\n\
+2\n\
+1\n\
+1\n\
+1\n\
+1\n\
+2\n\
+1\n\
+3\n\
+4\n\
+1\n\
+3\n\
+3\n\
+6\n\
+3\n\
+2\n\
+1\n\
+2\n\
+2\n\
+1\n\
+3\n\
+1\n\
+3\n\
+1\n\
+1\n\
+1\n\
+1\n\
+1\n\
+1\n\
+2\n\
+4\n\
+2\n\
+1\n\
+1\n\
+7\n\
+1\n\
+2\n\
+1\n\
+1\n\
+6\n\
+1\n\
+3\n\
+1\n\
+1\n\
+1\n\
+3\n\
+2\n\
+1\n\
+1\n\
+1\n\
+1\n\
+1\n\
+3\n\
+1\n\
+1\n\
+4\n\
+1\n\
+7\n\
+2\n\
+2\n\
+2\n\
+1\n\
+3\n\
+1\n\
+1\n\
+3\n\
+8\n\
+1\n\
+1\n\
+1\n\
+1\n\
+4\n\
+2\n\
+1\n\
+1\n\
+1\n\
+1\n\
+1\n\
+32\n\
+3\n\
+1\n\
+33\n\
+1\n\
+1\n\
+16\n\
+5\n\
+3\n\
+2\n\
+2\n\
+1\n\
+2\n\
+3\n\
+6\n\
+3\n\
+3\n\
+1\n\
+1\n\
+1\n\
+1\n\
+1\n\
+4\n\
+5\n\
+2\n\
+8\n\
+2\n\
+1\n\
+1\n\
+2\n\
+4\n\
+4\n\
+1\n\
+2\n\
+2\n\
+4\n\
+2\n\
+4\n\
+2\n\
+1\n\
+1\n\
+2\n\
+2\n\
+2\n\
+2\n\
+1\n\
+4\n\
+1\n\
+2\n\
+14\n\
+1\n\
+5\n\
+2\n\
+1\n\
+2\n\
+1\n\
+1\n\
+1\n\
+40\n\
+4\n\
+1\n\
+4\n\
+3\n\
+1\n\
+1\n\
+2\n\
+2\n\
+1\n\
+4\n\
+7\n\
+2\n\
+1\n\
+1\n\
+3\n\
+3\n\
+2\n\
+1\n\
+1\n\
+8\n\
+2\n\
+2\n\
+3\n\
+4\n\
+1\n\
+1\n\
+6\n\
+1\n\
+1\n\
+2\n\
+1\n\
+8\n\
+1\n\
+3\n\
+1\n\
+1\n\
+3\n\
+1\n\
+1\n\
+8\n\
+10\n\
+1\n\
+1\n\
+1\n\
+1\n\
+6\n\
+7\n\
+1\n\
+7\n\
+5\n\
+2\n\
+1\n\
+1\n\
+1\n\
+12\n\
+1\n\
+1\n\
+1\n\
+4\n\
+1\n\
+3\n\
+1\n\
+1\n\
+2\n\
+1\n\
+1\n\
+2\n\
+3\n\
+1\n\
+1\n\
+54\n\
+3\n\
+2\n\
+4\n\
+1\n\
+2\n\
+1\n\
+3\n\
+2\n\
+1\n\
+2\n\
+2\n\
+1\n\
+2\n\
+1\n\
+1\n\
+6\n\
+1\n\
+1\n\
+1\n\
+2\n\
+1\n\
+1\n\
+1\n\
+3\n\
+1\n\
+1\n\
+3\n\
+2\n\
+3\n\
+1\n\
+1\n\
+1\n\
+5\n\
+1\n\
+1\n\
+2\n\
+2\n\
+7\n\
+4\n\
+2\n\
+7\n\
+1\n\
+2\n\
+1\n\
+2\n\
+1\n\
+1\n\
+1\n\
+2\n\
+3\n\
+1\n\
+1\n\
+1\n\
+5\n\
+9\n\
+2\n\
+3\n\
+7\n\
+4\n\
+1\n\
+1\n\
+3\n\
+1\n\
+1\n\
+1\n\
+2\n\
+1\n\
+1\n\
+1\n\
+1\n\
+1\n\
+1\n\
+1\n\
+1\n\
+1\n\
+7\n\
+1\n\
+1\n\
+3\n\
+1\n\
+8\n\
+4\n\
+2\n\
+3\n\
+1\n\
+2\n\
+1\n\
+1\n\
+1\n\
+1\n\
+1\n\
+2\n\
+1\n\
+3\n\
+1\n\
+3\n\
+1\n\
+1\n\
+1\n\
+1\n\
+5\n\
+5\n\
+1\n\
+2\n\
+1\n\
+3\n\
+31\n\
+1\n\
+1\n\
+5\n\
+1\n\
+1\n\
+4\n\
+1\n\
+1\n\
+3\n\
+1\n\
+4\n\
+1\n\
+4\n\
+3\n\
+4\n\
+1\n\
+1\n\
+2\n\
+3\n\
+1\n\
+1\n\
+5\n\
+6\n\
+2\n\
+1\n\
+1\n\
+1\n\
+1\n\
+1\n\
+1\n\
+2\n\
+1\n\
+1\n\
+1\n\
+1\n\
+1\n\
+1\n\
+3\n\
+1\n\
+1\n\
+1\n\
+1\n\
+1\n\
+1\n\
+1\n\
+2\n\
+1\n\
+1\n\
+6\n\
+3\n\
+1\n\
+1\n\
+1\n\
+5\n\
+4\n\
+5\n\
+1\n\
+1\n\
+2\n\
+1\n\
+1\n\
+1\n\
+1\n\
+1\n\
+1\n\
+1\n\
+1\n\
+1\n\
+1\n\
+6\n\
+1\n\
+1\n\
+2\n\
+2\n\
+1\n\
+1\n\
+2\n\
+1\n\
+4\n\
+1\n\
+3\n\
+1\n\
+2\n\
+6\n\
+1\n\
+1\n\
+3\n\
+7\n\
+2\n\
+3\n\
+1\n\
+1\n\
+3\n\
+2\n\
+13\n\
+4\n\
+2\n\
+1\n\
+1\n\
+1\n\
+1\n\
+3\n\
+1\n\
+1\n\
+6\n\
+3\n\
+2\n\
+1\n\
+1\n\
+3\n\
+1\n\
+2\n\
+2\n\
+11\n\
+1\n\
+1\n\
+1\n\
+1\n\
+3\n\
+1\n\
+1\n\
+4\n\
+1\n\
+2\n\
+1\n\
+7\n\
+1\n\
+3\n\
+2\n\
+1\n\
+3\n\
+1\n\
+17\n\
+8\n\
+7\n\
+3\n\
+5\n\
+1\n\
+1\n\
+3\n\
+1\n\
+1\n\
+1\n\
+1\n\
+1\n\
+1\n\
+1\n\
+11\n\
+1\n\
+1\n\
+1\n\
+1\n\
+1\n\
+1\n\
+4\n\
+3\n\
+3\n\
+5\n\
+2\n\
+3\n\
+1\n\
+1\n\
+2\n\
+1\n\
+1\n\
+1\n\
+4\n\
+3\n\
+1\n\
+1\n\
+4\n\
+1\n\
+1\n\
+1\n\
+1\n\
+1\n\
+1\n\
+4\n\
+1\n\
+1\n\
+3\n\
+1\n\
+12\n\
+1\n\
+1\n\
+3\n\
+2\n\
+1\n\
+7\n\
+1\n\
+1\n\
+1\n\
+1\n\
+2\n\
+1\n\
+3\n\
+4\n\
+2\n\
+1\n\
+14\n\
+2\n\
+5\n\
+1\n\
+2\n\
+1\n\
+3\n\
+1\n\
+1\n\
+1\n\
+4\n\
+9\n\
+3\n\
+1\n\
+1\n\
+1\n\
+1\n\
+1\n\
+7\n\
+2\n\
+1\n\
+1\n\
+7\n\
+1\n\
+3\n\
+6\n\
+1\n\
+1\n\
+1\n\
+4\n\
+1\n\
+2\n\
+2\n\
+3\n\
+7\n\
+4\n\
+1\n\
+3\n\
+1\n\
+1\n\
+1\n\
+1\n\
+3\n\
+1\n\
+1\n\
+8\n\
+2\n\
+2\n\
+1\n\
+1\n\
+1\n\
+1\n\
+16\n\
+2\n\
+1\n\
+4\n\
+1\n\
+5\n\
+11\n\
+1\n\
+2\n\
+1\n\
+2\n\
+2\n\
+1\n\
+1\n\
+1\n\
+1\n\
+1\n\
+1\n\
+1\n\
+1\n\
+1\n\
+1\n\
+2\n\
+1\n\
+1\n\
+1\n\
+2\n\
+2\n\
+9\n\
+2\n\
+1\n\
+4\n\
+5\n\
+4\n\
+1\n\
+1\n\
+3\n\
+1\n\
+1\n\
+1\n\
+1\n\
+2\n\
+2\n\
+4\n\
+3\n\
+3\n\
+1\n\
+1\n\
+18\n\
+1\n\
+4\n\
+3\n\
+1\n\
+1\n\
+5\n\
+3\n\
+1\n\
+7\n\
+1\n\
+3\n\
+1\n\
+5\n\
+1\n\
+1\n\
+1\n\
+1\n\
+1\n\
+3\n\
+1\n\
+1\n\
+3\n\
+1\n\
+9\n\
+2\n\
+1\n\
+16\n\
+1\n\
+1\n\
+1\n\
+1\n\
+1\n\
+1\n\
+1\n\
+6\n\
+3\n\
+1\n\
+3\n\
+4\n\
+4\n\
+3\n\
+1\n\
+3\n\
+4\n\
+4\n\
+1\n\
+3\n\
+3\n\
+2\n\
+6\n\
+4\n\
+9\n\
+4\n\
+7\n\
+11\n\
+9\n\
+2\n\
+56\n\
+1\n\
+7\n\
+2\n\
+5\n\
+3\n\
+3\n\
+2\n\
+1\n\
+3\n\
+1\n\
+1\n\
+3\n\
+8\n\
+1\n\
+8\n\
+2\n\
+1\n\
+3\n\
+3\n\
+5\n\
+1\n\
+1\n\
+3\n\
+1\n\
+1\n\
+1\n\
+2\n\
+2\n\
+2\n\
+1\n\
+2\n\
+1\n\
+1\n\
+5\n\
+1\n\
+1\n\
+1\n\
+3\n\
+2\n\
+1\n\
+1\n\
+1\n\
+5\n\
+1\n\
+1\n\
+5\n\
+1\n\
+3\n\
+1\n\
+4\n\
+2\n\
+1\n\
+1\n\
+1\n\
+11\n\
+2\n\
+1\n\
+1\n\
+1\n\
+1\n\
+1\n\
+2\n\
+11\n\
+3\n\
+2\n\
+1\n\
+1\n\
+2\n\
+15\n\
+2\n\
+4\n\
+2\n\
+1\n\
+1\n\
+1\n\
+1\n\
+3\n\
+1\n\
+1\n\
+2\n\
+1\n\
+2\n\
+17\n\
+2\n\
+1\n\
+1\n\
+2\n\
+2\n\
+17\n\
+5\n\
+1\n\
+2\n\
+3\n\
+3\n\
+1\n\
+1\n\
+6\n\
+1\n\
+1\n\
+1\n\
+1\n\
+1\n\
+5\n\
+1\n\
+1\n\
+1\n\
+1\n\
+1\n\
+1\n\
+1\n\
+1\n\
+1\n\
+23\n\
+1\n\
+2\n\
+2\n\
+2\n\
+6\n\
+2\n\
+2\n\
+1\n\
+1\n\
+1\n\
+1\n\
+1\n\
+1\n\
+1\n\
+1\n\
+3\n\
+5\n\
+1\n\
+1\n\
+5\n\
+1\n\
+18\n\
+1\n\
+3\n\
+6\n\
+4\n\
+3\n\
+1\n\
+1\n\
+3\n\
+7\n\
+1\n\
+1\n\
+1\n\
+1\n\
+1\n\
+1\n\
+1\n\
+1\n\
+1\n\
+1\n\
+1\n\
+1\n\
+1\n\
+1\n\
+3\n\
+3\n\
+1\n\
+1\n\
+1\n\
+1\n\
+1\n\
+18\n\
+1\n\
+2\n\
+1\n\
+1\n\
+2\n\
+3\n\
+1\n\
+1\n\
+1\n\
+2\n\
+1\n\
+1\n\
+1\n\
+1\n\
+4\n\
+2\n\
+1\n\
+2\n\
+1\n\
+1\n\
+1\n\
+1\n\
+1\n\
+1\n\
+1\n\
+1\n\
+1\n\
+2\n\
+1\n\
+2\n\
+1\n\
+1\n\
+2\n\
+6\n\
+5\n\
+1\n\
+1\n\
+2\n\
+2\n\
+1\n\
+3\n\
+1\n\
+12\n\
+1\n\
+1\n\
+1\n\
+1\n\
+9\n\
+1\n\
+1\n\
+1\n\
+6\n\
+3\n\
+7\n\
+1\n\
+1\n\
+1\n\
+2\n\
+1\n\
+1\n\
+1\n\
+1\n\
+3\n\
+1\n\
+1\n\
+2\n\
+1\n\
+1\n\
+1\n\
+1\n\
+3\n\
+3\n\
+2\n\
+1\n\
+1\n\
+1\n\
+5\n\
+1\n\
+1\n\
+1\n\
+1\n\
+5\n\
+1\n\
+1\n\
+5\n\
+1\n\
+1\n\
+1\n\
+1\n\
+8\n\
+1\n\
+1\n\
+1\n\
+1\n\
+2\n\
+3\n\
+1\n\
+1\n\
+3\n\
+3\n\
+9\n\
+2\n\
+5\n\
+1\n\
+1\n\
+6\n\
+3\n\
+1\n\
+3\n\
+1\n\
+1\n\
+1\n\
+2\n\
+1\n\
+1\n\
+3\n\
+2\n\
+1\n\
+1\n\
+5\n\
+21\n\
+22\n\
+3\n\
+1\n\
+3\n\
+2\n\
+4\n\
+1\n\
+1\n\
+1\n\
+5\n\
+3\n\
+1\n\
+3\n\
+6\n\
+4\n\
+3\n\
+11\n\
+2\n\
+2\n\
+1\n\
+2\n\
+1\n\
+1\n\
+1\n\
+1\n\
+2\n\
+5\n\
+2\n\
+1\n\
+1\n\
+2\n\
+1\n\
+1\n\
+1\n\
+15\n\
+1\n\
+1\n\
+2\n\
+1\n\
+2\n\
+1\n\
+1\n\
+22\n\
+1\n\
+2\n\
+1\n\
+21\n\
+1\n\
+1\n\
+1\n\
+7\n\
+1\n\
+1\n\
+2\n\
+1\n\
+3\n\
+1\n\
+5\n\
+1\n\
+6\n\
+1\n\
+3\n\
+3\n\
+3\n\
+9\n\
+2\n\
+5\n\
+1\n\
+1\n\
+1\n\
+151\n\
+3\n\
+31\n\
+1\n\
+3\n\
+1\n\
+1\n\
+9\n\
+6\n\
+3\n\
+1\n\
+1\n\
+3\n\
+2\n\
+2\n\
+6\n\
+1\n\
+1\n\
+1\n\
+1\n\
+1\n\
+1\n\
+4\n\
+3\n\
+3\n\
+2\n\
+2\n\
+1\n\
+3\n\
+7\n\
+1\n\
+1\n\
+2\n\
+2\n\
+4\n\
+3\n\
+1\n\
+1\n\
+4\n\
+1\n\
+4\n\
+1\n\
+1\n\
+1\n\
+1\n\
+2\n\
+1\n\
+1\n\
+3\n\
+1\n\
+1\n\
+18\n\
+7\n\
+2\n\
+7\n\
+1\n\
+1\n\
+2\n\
+6\n\
+2\n\
+1\n\
+1\n\
+5\n\
+2\n\
+1\n\
+1\n\
+2\n\
+2\n\
+7\n\
+2\n\
+4\n\
 "/*data_placeholder*/;
 
     var data = d3.csv.parse(rawData).map(function (d) { return parseInt(d["commit size"]); });
 
     var formatCount = d3.format(",.0f");
+    var valueFormat = function(n) {
+        var s = d3.format(",")(n);
+        return s.length < 6 ? s : d3.format("s")(n);
+    };
 
     var margin = {top: 10, right: 30, bottom: 30, left: 30},
         width = 960 - margin.left - margin.right,
         height = 500 - margin.top - margin.bottom;
 
     var x = d3.scale.linear().domain([0, Math.round(d3.max(data) / 10) * 10]).range([0, width]);
-    var binnedData = d3.layout.histogram().bins(x.ticks(100))(data);
+    var binnedData = d3.layout.histogram().bins(x.ticks(200))(data);
     var y = d3.scale.linear().domain([0, d3.max(binnedData, function(d) { return d.y; })]).range([height, 0]);
     var xAxis = d3.svg.axis().scale(x).orient("bottom");
+    var yAxis = d3.svg.axis().scale(y).orient("left").tickFormat(valueFormat);
 
     var svg = d3.select("body").append("svg")
             .attr("width", width + margin.left + margin.right)
@@ -84,16 +1265,11 @@ commit size\n\
             .attr("width", x(binnedData[0].dx) - 1)
             .attr("height", function(d) { return height - y(d.y); });
 
-    bar.append("text")
-            .attr("dy", ".75em")
-            .attr("y", 6)
-            .attr("x", x(binnedData[0].dx) / 2)
-            .attr("text-anchor", "middle")
-            .text(function(d) { return formatCount(d.y); });
-
     svg.append("g")
             .attr("class", "x axis")
             .attr("transform", "translate(0," + height + ")")
             .call(xAxis);
-
+    svg.append("g")
+            .attr("class", "y axis")
+            .call(yAxis);
 </script>
